--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,13 @@
 {
   "presets": ["@babel/preset-env", "@babel/preset-react"],
-  "plugins": ["@babel/plugin-proposal-class-properties"]
+  "plugins": [
+    [
+      "@babel/plugin-transform-react-jsx",
+      {
+        "pragmaFrag": "React.Fragment"
+      },
+      "storybook-transform-jsx"
+    ],
+    "@babel/plugin-proposal-class-properties"
+  ]
 }
