--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "/react-components/",
   "devDependencies": {
     "@babel/cli": "7.8.4",
+    "@percy/storybook": "3.3.0",
     "@storybook/addon-docs": "5.3.14",
     "@storybook/addon-knobs": "5.3.14",
     "@storybook/react": "5.3.14",
@@ -52,6 +53,7 @@
     "lint": "yarn lint-package-json && yarn lint-js",
     "prepublishOnly": "yarn clean && yarn install && yarn build",
     "serve": "yarn docs",
+    "snapshot": "build-storybook && percy-storybook --widths=320,1280",
     "start": "yarn docs",
     "test": "react-scripts test"
   },
